align and responsiveness fix

--- a/style.css
+++ b/style.css
@@ -441,8 +441,9 @@ nav .fa-solid{
 
 
 @media (max-width: 700px){
-    .row {
+    .band-container {
         flex-direction: column;
+        align-items: center;
     }
 }
 
